# KeepActivePro

./: .gitignore  LICENSE  Procfile  README.md  alembic.ini  contact.html  index.html  keep_active_pro.spec  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 44243f51ad13_initial_migration.py  7505232790b5_recreated_missing_migration.py  943255814857_initial_migration.py  f8f18f2ff5c2_recreated_missing_migration.py
backend/: database.py  lambda_function.py  main.py  metrics_handler.py  models.py
backend/package/: database.py  lambda_function.py  main.py  models.py  requirements.txt
backend/package/MarkupSafe-3.0.2.dist-info/: RECORD
backend/package/SQLAlchemy-2.0.38.dist-info/: RECORD
backend/package/charset_normalizer-3.4.1.dist-info/: RECORD
backend/package/fastapi-0.115.11.dist-info/: RECORD
backend/package/fastapi-0.115.8.dist-info/: RECORD
backend/package/greenlet-3.1.1.dist-info/: RECORD
backend/package/psycopg2_binary-2.9.10.dist-info/: RECORD
backend/package/pydantic_core-2.27.2.dist-info/: RECORD
backend/package/uvicorn-0.34.0.dist-info/: RECORD
downloads/windows/: KeepAwake.vbs
fastapi_backend/: Procfile  database.py  main.py  models.py
frontend/: contact.html  index.html  thankyou.html
package/fastapi-0.115.8.dist-info/: RECORD
package/uvicorn-0.34.0.dist-info/: RECORD
src/: keep_active_pro.py
templates/: contact.html  thankyou.html
windows/: KeepAwake.vbs
