[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KeepActivePro"
version = "1.0.0"
description = "A lightweight tool to prevent PC sleep"
authors = [
    { name="Ravishankar Gavhane", email="your-email@example.com" }
]
dependencies = ["pyautogui", "tk"]
